--- a/composer.json
+++ b/composer.json
@@ -84,6 +84,12 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.43"
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/browser-kit": "6.1.*",
+        "symfony/css-selector": "6.1.*",
+        "symfony/maker-bundle": "^1.43",
+        "symfony/phpunit-bridge": "^6.1",
+        "symfony/stopwatch": "6.1.*",
+        "symfony/web-profiler-bundle": "6.1.*"
     }
 }
