--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -5,3 +5,7 @@ api_platform:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+    eager_loading:
+        force_eager: false
+    defaults:
+        pagination_enabled: false
